[package]
name = "media-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
base64 = "0.22.1"
image = "0.25.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [
  "Foundation",
  "Media_Control",
  "Storage_Streams",
] }
