[package]
name = "media-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
base64 = "0.22.1"
image = "0.25.2"
percent-encoding = "2.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57.0", features = [
  "Foundation",
  "Media_Control",
  "Storage_Streams",
] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = "0.1.1"
